--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib", "rlib"]
 bresenham = "0.1.1"
 chrono ={version= "0.4.38", features=["wasmbind", "now"]}
 fastrand = "2.2.0"
+include_file_compress = "0.1.3"
 itertools = "0.13.0"
 # number-theory = "0.0.24"
 rayon = "1.10.0"
